fix(tab-title): add full focus outline to closable tab button Effect is only noticable in high-contrast mode. Issue #6994

--- a/packages/calcite-components/src/components/tab-title/tab-title.scss
+++ b/packages/calcite-components/src/components/tab-title/tab-title.scss
@@ -292,4 +292,8 @@
   :host([bordered][position="bottom"][selected]) .container {
     border-block-start-style: none;
   }
+
+  .close-button {
+    @apply z-default;
+  }
 }
